<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="?background" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:id="@id/textWeekDay" android:text="Week 1   Day 1" android:keepScreenOn="true" style="@style/Title" />
        <include layout="@layout/ads_layout"/>
        
        <LinearLayout android:id="@id/layoutTop" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:id="@id/btnRestart" android:padding="@dimen/dp_10" android:clickable="true" android:layout_width="@dimen/dp_50" android:layout_height="@dimen/dp_50" android:src="@drawable/arrow_circle" />
            <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0" />
            <ImageView android:id="@id/btnSound" android:paddingLeft="@dimen/dp_10" android:paddingTop="@dimen/dp_10" android:paddingRight="@dimen/dp_5" android:paddingBottom="@dimen/dp_10" android:clickable="true" android:layout_width="@dimen/dp_50" android:layout_height="@dimen/dp_50" android:src="@drawable/volume_on" />
            <ImageView android:id="@id/btnHelp" android:paddingLeft="@dimen/dp_5" android:paddingTop="@dimen/dp_10" android:paddingRight="@dimen/dp_10" android:paddingBottom="@dimen/dp_10" android:clickable="true" android:layout_width="@dimen/dp_50" android:layout_height="@dimen/dp_50" android:src="@drawable/help" />
        </LinearLayout>
        <FrameLayout android:id="@id/layoutMain" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
            <TextView android:textSize="@dimen/training_main_text_size" android:gravity="center" android:id="@id/textMain" android:paddingBottom="@dimen/dp_15" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="Pushups to Perform" style="@style/ButtonText" />
            <alexcrusher.just6weeks.lib.views.TimerView android:layout_gravity="center" android:id="@id/timerView" android:background="@drawable/circle_black" android:visibility="gone" android:layout_width="@dimen/circle_size" android:layout_height="@dimen/circle_size" />
            <TextView android:textSize="@dimen/text_main_counter" android:textColor="?text_color" android:gravity="center" android:layout_gravity="center" android:id="@id/textMainCounter" android:layout_width="@dimen/circle_size" android:layout_height="@dimen/circle_size" android:text="45" style="@style/ButtonText" />
            <LinearLayout android:gravity="center" android:layout_gravity="bottom" android:orientation="vertical" android:id="@id/containerSets" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:gravity="center" android:id="@id/layoutSets" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/dp_10" android:layout_marginTop="@dimen/dp_30" android:layout_marginRight="@dimen/dp_10">
                    <TextView android:textSize="@dimen/sp_20" android:gravity="center" android:id="@id/textSet1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="22x2" android:layout_weight="1.0" style="@style/WhiteTextWithShadow" />
                    <TextView android:textSize="@dimen/sp_20" android:gravity="center" android:id="@id/textSet2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="30x2" android:layout_weight="1.0" style="@style/WhiteTextWithShadow" />
                    <TextView android:textSize="@dimen/sp_20" android:gravity="center" android:id="@id/textSet3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="25x2" android:layout_weight="1.0" style="@style/WhiteTextWithShadow" />
                    <TextView android:textSize="@dimen/sp_20" android:gravity="center" android:id="@id/textSet4" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="18x2" android:layout_weight="1.0" style="@style/WhiteTextWithShadow" />
                    <TextView android:textSize="@dimen/sp_20" android:gravity="center" android:id="@id/textSet5" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="55+" android:layout_weight="1.0" style="@style/WhiteTextWithShadow" />
                </LinearLayout>
                <LinearLayout android:orientation="vertical" android:id="@id/disableAdLayout" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <LinearLayout android:gravity="bottom" android:layout_gravity="bottom" android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <ImageView android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="@dimen/dp_1" android:layout_weight="1.0" />
                        <ImageButton android:id="@id/disableAdButton" android:background="@drawable/disable_ad" android:layout_width="@dimen/dp_32" android:layout_height="@dimen/dp_32" />
                    </LinearLayout>
                    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/tapjoyAdLayout" android:background="#ff000000" android:layout_width="fill_parent" android:layout_height="wrap_content" />
                    <ImageView android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="@dimen/dp_1" />
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
        <LinearLayout android:id="@id/layoutBottom" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_40" android:layout_marginTop="@dimen/dp_10" android:layout_marginRight="@dimen/dp_40" android:layout_marginBottom="@dimen/dp_10">
            <Button android:textSize="@dimen/sp_25" android:id="@id/btnAdd30Sec" android:background="?button_background" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="@dimen/dp_45" android:layout_marginRight="@dimen/dp_5" android:text="+30sec" android:layout_weight="1.0" style="@style/ButtonText" />
            <Button android:textSize="@dimen/sp_25" android:id="@id/btnStopTimer" android:background="?button_background" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="@dimen/dp_45" android:layout_marginLeft="@dimen/dp_5" android:text="@string/stop" android:layout_weight="1.0" style="@style/ButtonText" />
            <LinearLayout android:gravity="center" android:id="@id/layoutChangeReps" android:background="?button_background" android:paddingLeft="@dimen/dp_28" android:clickable="true" android:layout_width="fill_parent" android:layout_height="@dimen/dp_45" android:layout_marginRight="@dimen/dp_5" android:layout_weight="1.0">
                <TextView android:textSize="@dimen/sp_25" android:gravity="right|center" android:id="@id/textChangeReps" android:paddingRight="@dimen/dp_4" android:layout_width="wrap_content" android:layout_height="@dimen/dp_45" android:text="25" android:layout_weight="1.0" style="@style/ButtonText" />
                <LinearLayout android:gravity="left|center" android:layout_width="@dimen/dp_24" android:layout_height="@dimen/dp_45" android:layout_weight="1.0">
                    <ImageView android:layout_width="@dimen/dp_24" android:layout_height="@dimen/dp_24" android:src="@drawable/pencil" />
                </LinearLayout>
            </LinearLayout>
            <Button android:textSize="@dimen/sp_25" android:id="@id/btnDone" android:background="?button_background" android:layout_width="fill_parent" android:layout_height="@dimen/dp_45" android:layout_marginLeft="@dimen/dp_5" android:text="@string/done" android:layout_weight="1.0" style="@style/ButtonText" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/layoutHelp" android:background="#bb000000" android:visibility="invisible" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:visibility="invisible" android:text="Week 1   Day 1" style="@style/Title" />
        <LinearLayout android:gravity="right" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:id="@id/btnHelp2" android:paddingLeft="@dimen/dp_5" android:paddingTop="@dimen/dp_10" android:paddingRight="@dimen/dp_10" android:paddingBottom="@dimen/dp_10" android:clickable="true" android:layout_width="@dimen/dp_50" android:layout_height="@dimen/dp_50" android:src="@drawable/help" />
        </LinearLayout>
        <ImageView android:layout_gravity="right" android:visibility="visible" android:layout_width="@dimen/dp_35" android:layout_height="@dimen/dp_40" android:layout_marginRight="@dimen/dp_40" android:src="@drawable/hand_arrow1" />
        <TextView android:textSize="@dimen/sp_18" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_5" android:layout_marginRight="@dimen/dp_5" android:text="@string/help_help2_description" style="@style/WhiteTextWithShadow" />
        <LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0" />
        
        <TextView android:textSize="@dimen/sp_18" android:id="@id/textHelpChangeRepsInfo" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_5" android:layout_marginRight="@dimen/dp_5" android:text="@string/help_change_reps_description" style="@style/WhiteTextWithShadow" />
        
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_35" android:layout_marginRight="@dimen/dp_35">
            <ImageView android:layout_width="fill_parent" android:layout_height="@dimen/dp_100" android:src="@drawable/hand_circle1" android:layout_weight="1.0" />
            <Button android:textSize="@dimen/sp_25" android:background="?button_background" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="@dimen/dp_45" android:layout_marginLeft="@dimen/dp_5" android:text="@string/stop" android:layout_weight="1.0" style="@style/ButtonText" />
        </LinearLayout>
         
    </LinearLayout>
   
</FrameLayout>